fixing overflow

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
     text-decoration: none;
     outline: none;
     font-family: 'Acme', sans-serif;
+    
 
 }
 .section-heading{
@@ -21,16 +22,26 @@
 html{
     font-size: 65%;
 }
+body{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
+}
 /**end of common style**/
 .nav-bar{
     width: 100%;
     height: 17rem;
     position: fixed;
     background-color: #000;
+    top: -16rem;
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 1000;    
+    z-index: 100; 
+    overflow: hidden;
+    transition: top 1s ;   
 }
 .nav-item{
     display: flex;
@@ -54,12 +65,14 @@ nav  span.nav-name{
 .menu{
     width: 3.5rem;
     height: 5rem;
-    top: 20rem;
+    top: 5rem;
     left: 5rem;
     background-color: rgba(255, 69, 2, 0.932);
     box-shadow: .2rem .2rem .2rem .2rem #000;
     border-radius: 30rem 30rem 15rem 15rem;
     position: fixed;
+    transition: top 1s .5s;
+    cursor: pointer;
 }
 .menu::before{
     content: "";
@@ -69,6 +82,14 @@ nav  span.nav-name{
     background-color: #000;
     position: absolute;
     left: calc(50% - .15rem);
+}
+.nav-bar.target{
+    top: 0;
+    transition: top 1s .5s;
+}
+.menu.target{
+    top: 20rem;
+    transition: top 1s .2s;
 }
 /**section 1**/
 .section-1{
@@ -90,6 +111,7 @@ nav  span.nav-name{
 .section-1-icons i.change{
     transform: translate(-50%, -50%) scale(1); 
 }
+
 /**end of section 1**/
 /**start of section-2**/
 .section-heading-2{
@@ -323,3 +345,5 @@ letter-spacing: .2rem;
 }
 
 /** end of section 4**/
+
+@media (max-width:)
